--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "devDependencies": {
     "@astrojs/preact": "^1.0.2",
-    "@astrojs/sitemap": "^1.0.0",
-    "astro": "^1.0.6"
+    "@astrojs/sitemap": "^1.0.0"
   }
 }
